# swapbytes

./: Cargo.toml  README.md
src/: lib.rs
swapbytes-derive/: Cargo.toml
swapbytes-derive/src/: lib.rs
